--- a/chat2.html
+++ b/chat2.html
@@ -5,7 +5,7 @@
 <title>Chat</title>
 <head><script src='//production-assets.codepen.io/assets/editor/live/console_runner-079c09a0e3b9ff743e39ee2d5637b9216b3545af0de366d4b9aad9dc87e26bfd.js'></script><script src='//production-assets.codepen.io/assets/editor/live/events_runner-73716630c22bbc8cff4bd0f07b135f00a0bdc5d14629260c3ec49e5606f98fdd.js'></script><script src='//production-assets.codepen.io/assets/editor/live/css_live_reload_init-2c0dc5167d60a5af3ee189d570b1835129687ea2a61bee3513dee3a50c115a77.js'></script><meta charset='UTF-8'><meta name="robots" content="noindex"><link rel="shortcut icon" type="image/x-icon" href="//production-assets.codepen.io/assets/favicon/favicon-8ea04875e70c4b0bb41da869e81236e54394d63638a1ef12fa558a4a835f1164.ico" /><link rel="mask-icon" type="" href="//production-assets.codepen.io/assets/favicon/logo-pin-f2d2b6d2c61838f7e76325261b7195c27224080bc099486ddd6dccb469b8e8e6.svg" color="#111" /><link rel="canonical" href="https://codepen.io/emilcarlsson/pen/ZOQZaV?limit=all&page=74&q=contact+" />
 <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700,300' rel='stylesheet' type='text/css'>
-<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css'><link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.2/css/font-awesome.min.css'>
 <link href="css/chat.css" rel="stylesheet" type="text/css">
 </head>
@@ -19,8 +19,8 @@
 			</div>
 		</div>
 		<div id="search">
-			<label for=""><i class="fa fa-search" aria-hidden="true"></i></label>
-			<input type="text" placeholder="Buscar Contactos..." />
+			<input type="text" placeholder="Buscar Conversación..." />
+			<a type="button" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
 		</div>
 		<div id="contacts">
 			<ul>
@@ -30,6 +30,7 @@
 						<div class="meta">
 							<p class="name">Louis Litt</p>
 							<p class="preview">You just got LITT up, Mike.</p>
+							<small>09:00</small>
 						</div>
 					</div>
 				</li>
@@ -39,6 +40,7 @@
 						<div class="meta">
 							<p class="name">Harvey Specter</p>
 							<p class="preview">Wrong. You take the gun, or you pull out a bigger one. Or, you call their bluff. Or, you do any one of a hundred and forty six other things.</p>
+							<small>09:00</small>
 						</div>
 					</div>
 				</li>
@@ -48,6 +50,7 @@
 						<div class="meta">
 							<p class="name">Rachel Zane</p>
 							<p class="preview">I was thinking that we could have chicken tonight, sounds good?</p>
+							<small>09:00</small>
 						</div>
 					</div>
 				</li>
@@ -57,6 +60,7 @@
 						<div class="meta">
 							<p class="name">Donna Paulsen</p>
 							<p class="preview">Mike, I know everything! I'm Donna..</p>
+							<small>09:00</small>
 						</div>
 					</div>
 				</li>
@@ -66,6 +70,7 @@
 						<div class="meta">
 							<p class="name">Jessica Pearson</p>
 							<p class="preview">Have you finished the draft on the Hinsenburg deal?</p>
+							<small>09:00</small>
 						</div>
 					</div>
 				</li>
@@ -75,6 +80,7 @@
 						<div class="meta">
 							<p class="name">Harold Gunderson</p>
 							<p class="preview">Thanks Mike! :)</p>
+							<small>09:00</small>
 						</div>
 					</div>
 				</li>
@@ -84,6 +90,7 @@
 						<div class="meta">
 							<p class="name">Daniel Hardman</p>
 							<p class="preview">We'll meet again, Mike. Tell Jessica I said 'Hi'.</p>
+							<small>09:00</small>
 						</div>
 					</div>
 				</li>
@@ -93,6 +100,7 @@
 						<div class="meta">
 							<p class="name">Katrina Bennett</p>
 							<p class="preview">I've sent you the files for the Garrett trial.</p>
+							<small>09:00</small>
 						</div>
 					</div>
 				</li>
@@ -102,6 +110,7 @@
 						<div class="meta">
 							<p class="name">Charles Forstman</p>
 							<p class="preview">Mike, this isn't over.</p>
+							<small>09:00</small>
 						</div>
 					</div>
 				</li>
@@ -111,14 +120,16 @@
 						<div class="meta">
 							<p class="name">Jonathan Sidwell</p>
 							<p class="preview"><span>You:</span> That's bullshit. This deal is solid.</p>
+							<small>09:00</small>
 						</div>
 					</div>
 				</li>
 			</ul>
 		</div>
 		<div id="bottom-bar">
-			<button id="addcontact"><i class="fa fa-user-plus fa-fw" aria-hidden="true"></i> <span>Añadir Contacto</span></button>
-			<button id="settings"><i class="fa fa-cog fa-fw" aria-hidden="true"></i> <span>Configuración</span></button>
+			<button id="addcontact" type="button" data-toggle="modal" data-target="#modal-contacto"><i class="fa fa-user-plus fa-fw" aria-hidden="true"></i> <span>Añadir Contacto</span></button>
+			<button id="newmessage" type="button" data-toggle="modal" data-target="#modal-newmessage"><i class="fa fa-envelope fa-fw" aria-hidden="true"></i> <span>Nuevo Mensaje</span></button>
+			<button id="settings" type="button" data-toggle="modal" data-target="#modal-settings"><i class="fa fa-cog fa-fw" aria-hidden="true"></i></button>
 		</div>
 	</div>
 	<div class="content">
@@ -130,35 +141,35 @@
 			<ul>
 				<li class="sent">
 					<img src="http://emilcarlsson.se/assets/mikeross.png" alt="" />
-					<p>How the hell am I supposed to get a jury to believe you when I am not even sure that I do?!</p>
+					<p>How the hell am I supposed to get a jury to believe you when I am not even sure that I do?! <small>06:00</small></p>
 				</li>
 				<li class="replies">
 					<img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="" />
-					<p>When you're backed against the wall, break the god damn thing down.</p>
+					<p>When you're backed against the wall, break the god damn thing down. <small>06:20</small></p>
 				</li>
 				<li class="replies">
 					<img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="" />
-					<p>Excuses don't win championships.</p>
+					<p>Excuses don't win championships. <small>06:21</small></p>
 				</li>
 				<li class="sent">
 					<img src="http://emilcarlsson.se/assets/mikeross.png" alt="" />
-					<p>Oh yeah, did Michael Jordan tell you that?</p>
+					<p>Oh yeah, did Michael Jordan tell you that? <small>06:25</small></p>
 				</li>
 				<li class="replies">
 					<img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="" />
-					<p>No, I told him that.</p>
+					<p>No, I told him that. <small>06:30</small></p>
 				</li>
 				<li class="replies">
 					<img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="" />
-					<p>What are your choices when someone puts a gun to your head?</p>
+					<p>What are your choices when someone puts a gun to your head? <small>08:00</small></p>
 				</li>
 				<li class="sent">
 					<img src="http://emilcarlsson.se/assets/mikeross.png" alt="" />
-					<p>What are you talking about? You do what they say or they shoot you.</p>
+					<p>What are you talking about? You do what they say or they shoot you. <small>08:05</small></p>
 				</li>
 				<li class="replies">
 					<img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="" />
-					<p>Wrong. You take the gun, or you pull out a bigger one. Or, you call their bluff. Or, you do any one of a hundred and forty six other things.</p>
+					<p>Wrong. You take the gun, or you pull out a bigger one. Or, you call their bluff. Or, you do any one of a hundred and forty six other things. <small>09:00</small></p>
 				</li>
 			</ul>
 		</div>
@@ -171,10 +182,183 @@
 		</div>
 	</div>
 </div>
+<!-- Modal Nuevo Contacto-->
+<div class="modal fade" id="modal-contacto" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+	  	<div class="modal-content">
+			<div class="modal-header">
+		  		<h5 class="modal-title">Añadir Contacto</h5>
+		  		<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+		  		</button>
+			</div>
+			<div class="modal-body">
+				<input type="text" class="form-control" placeholder="Nombre del Contacto">
+				<div class="input-group mb-3" style="margin-top: 5px;">
+					<input type="text" class="form-control" placeholder="Número del Contacto" aria-describedby="verificar">
+					<div class="input-group-append">
+					  	<button class="btn btn-outline-secondary" type="button" id="verificar">Verificar</button>
+					</div>
+				</div>
+				<small>Antes de crear el contacto deberá verificar si existe en nuestra BD</small>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+				<button type="button" class="btn btn-primary" style="background-color: #39A1E5;" disabled>Crear Contacto</button>
+			</div>
+	  	</div>
+	</div>
+</div>
+<!-- Modal Nuevo Mensaje-->
+<div class="modal fade" id="modal-newmessage" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+	  	<div class="modal-content">
+			<div class="modal-header">
+		  		<h5 class="modal-title">Seleccione el Contacto</h5>
+		  		<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+		  		</button>
+			</div>
+			<div class="modal-body">
+				<ul>
+					<li class="contact">
+						<div class="wrap">
+							<img src="http://emilcarlsson.se/assets/louislitt.png" alt="" />
+							<div class="meta">
+								<p class="name">Louis Litt</p>
+							</div>
+						</div>
+					</li>
+					<li class="contact">
+						<div class="wrap">
+							<img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="" />
+							<div class="meta">
+								<p class="name">Harvey Specter</p>
+							</div>
+						</div>
+					</li>
+					<li class="contact">
+						<div class="wrap">
+							<img src="http://emilcarlsson.se/assets/rachelzane.png" alt="" />
+							<div class="meta">
+								<p class="name">Rachel Zane</p>
+							</div>
+						</div>
+					</li>
+					<li class="contact">
+						<div class="wrap">
+							<img src="http://emilcarlsson.se/assets/donnapaulsen.png" alt="" />
+							<div class="meta">
+								<p class="name">Donna Paulsen</p>
+							</div>
+						</div>
+					</li>
+					<li class="contact">
+						<div class="wrap">
+							<img src="http://emilcarlsson.se/assets/jessicapearson.png" alt="" />
+							<div class="meta">
+								<p class="name">Jessica Pearson</p>
+							</div>
+						</div>
+					</li>
+					<li class="contact">
+						<div class="wrap">
+							<img src="http://emilcarlsson.se/assets/haroldgunderson.png" alt="" />
+							<div class="meta">
+								<p class="name">Harold Gunderson</p>
+							</div>
+						</div>
+					</li>
+					<li class="contact">
+						<div class="wrap">
+							<img src="http://emilcarlsson.se/assets/danielhardman.png" alt="" />
+							<div class="meta">
+								<p class="name">Daniel Hardman</p>
+							</div>
+						</div>
+					</li>
+					<li class="contact">
+						<div class="wrap">
+							<img src="http://emilcarlsson.se/assets/katrinabennett.png" alt="" />
+							<div class="meta">
+								<p class="name">Katrina Bennett</p>
+							</div>
+						</div>
+					</li>
+					<li class="contact">
+						<div class="wrap">
+							<img src="http://emilcarlsson.se/assets/charlesforstman.png" alt="" />
+							<div class="meta">
+								<p class="name">Charles Forstman</p>
+							</div>
+						</div>
+					</li>
+					<li class="contact">
+						<div class="wrap">
+							<img src="http://emilcarlsson.se/assets/jonathansidwell.png" alt="" />
+							<div class="meta">
+								<p class="name">Jonathan Sidwell</p>
+							</div>
+						</div>
+					</li>
+				</ul>
+			</div>
+	  	</div>
+	</div>
+</div>
+<!-- Modal Ajustes-->
+<div class="modal fade" id="modal-settings" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+	  	<div class="modal-content">
+			<div class="modal-header">
+		  		<h5 class="modal-title">Ajustes</h5>
+		  		<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+		  		</button>
+			</div>
+			<div class="modal-body">
+				<div style="margin-bottom: 10px;">
+					<img id="profile-img" src="http://emilcarlsson.se/assets/mikeross.png" class="mr-auto ml-auto" alt="" />
+					<p style="display: block; text-align: center; margin-top: 5px;">Mike Ross <a href="#" class="fa fa-pencil fa-fw"></a></p>
+				</div>
+				<input style="margin-bottom: 10px;" type="text" class="form-control" placeholder="Estado" value="Aquí va el estado">
+				<button type="button" style="width: 100%; margin-bottom: 10px;" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#modal-change-password">Cambiar Contraseña</button>
+				<a type="button" style="width: 100%; margin-bottom: 10px;" class="btn btn-danger" href="login.html">Cerrar Sesión</a>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+				<button type="button" class="btn btn-primary" style="background-color: #39A1E5;" disabled>Aplicar Cambios</button>
+			</div>
+	  	</div>
+	</div>
+</div>
+<!-- Modal Cambiar Contraseña-->
+<div class="modal fade" id="modal-change-password" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+	  	<div class="modal-content">
+			<div class="modal-header">
+		  		<h5 class="modal-title">Cambiar Contraseña</h5>
+		  		<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+		  		</button>
+			</div>
+			<div class="modal-body">
+				<input style="margin-bottom: 10px;" type="password" class="form-control" placeholder="Contraseña Actual">
+				<input style="margin-bottom: 10px;" type="password" class="form-control" placeholder="Contraseña Nueva">
+				<input style="margin-bottom: 10px;" type="password" class="form-control" placeholder="Confirmar Contraseña">
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+				<button type="button" class="btn btn-primary" style="background-color: #39A1E5;">Cambiar Contraseña</button>
+			</div>
+	  	</div>
+	</div>
+</div>
 <script src='//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js'></script><script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
 <script src="js/chat.js" type="text/javascript"></script>
 <script src="https://use.typekit.net/hoy3lrg.js"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body></html>
