--- a/registro.html
+++ b/registro.html
@@ -19,131 +19,16 @@
                     <div class="form-group">
                         <div class="row">
                             <div class="col">
-                                <input type="text" class="form-control" placeholder="Nombre(s)">
-                            </div>
-                            <div class="col">
-                                <input type="text" class="form-control" placeholder="Apellido(s)">
+                                <input type="text" class="form-control" placeholder="Nombre Completo">
                             </div>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="row">
                             <div class="col">
-                                <select aria-label="Día" id="inputState" class="form-control">
-                                    <option disabled selected>Día</option>
-                                    <option>1</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                    <option>4</option>
-                                    <option>5</option>
-                                    <option>6</option>
-                                    <option>7</option>
-                                    <option>8</option>
-                                    <option>9</option>
-                                    <option>10</option>
-                                    <option>11</option>
-                                    <option>12</option>
-                                    <option>13</option>
-                                    <option>14</option>
-                                    <option>15</option>
-                                    <option>16</option>
-                                    <option>17</option>
-                                    <option>18</option>
-                                    <option>19</option>
-                                    <option>20</option>
-                                    <option>21</option>
-                                    <option>22</option>
-                                    <option>23</option>
-                                    <option>24</option>
-                                    <option>25</option>
-                                    <option>26</option>
-                                    <option>27</option>
-                                    <option>28</option>
-                                    <option>29</option>
-                                    <option>30</option>
-                                    <option>31</option>
-                                </select>
-                            </div>
-                            <div class="col">
-                                <select aria-label="Mes" id="inputState" class="form-control">
-                                    <option disabled selected>Mes</option>
-                                    <option>Enero</option>
-                                    <option>Febrero</option>
-                                    <option>Marzo</option>
-                                    <option>Abril</option>
-                                    <option>Mayo</option>
-                                    <option>Junio</option>
-                                    <option>Julio</option>
-                                    <option>Agosto</option>
-                                    <option>Septiembre</option>
-                                    <option>Octubre</option>
-                                    <option>Noviembre</option>
-                                    <option>Diciembre</option>
-                                </select>
-                            </div>
-                            <div class="col">
-                                <select aria-label="Año" id="inputState" class="form-control">
-                                    <option disabled selected>Año</option>
-                                    <option>2021</option>
-                                    <option>2020</option>
-                                    <option>2019</option>
-                                    <option>2018</option>
-                                    <option>2017</option>
-                                    <option>2016</option>
-                                    <option>2015</option>
-                                    <option>2014</option>
-                                    <option>2013</option>
-                                    <option>2012</option>
-                                    <option>2011</option>
-                                    <option>2010</option>
-                                    <option>2009</option>
-                                    <option>2008</option>
-                                    <option>2007</option>
-                                    <option>2006</option>
-                                    <option>2005</option>
-                                    <option>2004</option>
-                                    <option>2003</option>
-                                    <option>2002</option>
-                                    <option>2001</option>
-                                    <option>2000</option>
-                                    <option>1999</option>
-                                    <option>1998</option>
-                                    <option>1997</option>
-                                    <option>1996</option>
-                                    <option>1995</option>
-                                    <option>1994</option>
-                                    <option>1993</option>
-                                    <option>1992</option>
-                                    <option>1991</option>
-                                    <option>1990</option>
-                                    <option>1989</option>
-                                    <option>1988</option>
-                                    <option>1987</option>
-                                    <option>1986</option>
-                                    <option>1985</option>
-                                    <option>1984</option>
-                                    <option>1983</option>
-                                    <option>1982</option>
-                                </select>
+                                <input type="text" class="form-control" placeholder="Número de Teléfono">
                             </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col">
-                                <input type="number" class="form-control" placeholder="Número de Teléfono">
-                            </div>
-                            <div class="col">
-                                <select aria-label="Año" id="inputState" class="form-control">
-                                    <option disabled selected>Sexo</option>
-                                    <option>Masculino</option>
-                                    <option>Femenino</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingrese su Correo Electrónico">
                     </div>
                     <div class="row">
                         <div class="form-group col">
@@ -158,9 +43,9 @@
                         <label class="form-check-label" >Acepto los <a href="#"> Terminos y Condiciones</a></label>
                     </div>
                     <div class="form-group">
-                        <label class="form-check-label" >¿Ya tienes una cuenta? <a href="#">Inicia Sesión</a></label>
+                        <label class="form-check-label" >¿Ya tienes una cuenta? <a href="login.html">Inicia Sesión</a></label>
                     </div>
-                    <button type="submit" class="btn btn-primary" style="width: 100%;">Submit</button>
+                    <button type="submit" class="btn btn-primary" style="width: 100%;">Regístate</button>
                 </form>
             </div>
         </section>
