--- a/registro.html
+++ b/registro.html
@@ -19,36 +19,40 @@
                     <div class="form-group">
                         <div class="row">
                             <div class="col">
-                                <input type="text" class="form-control" placeholder="Nombre Completo">
+                                <input id="nombre" type="text" class="form-control" placeholder="Nombre Completo " required>
                             </div>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="row">
                             <div class="col">
-                                <input type="text" class="form-control" placeholder="Número de Teléfono">
+                                <input id="telefono" type="text" class="form-control" placeholder="Número de Teléfono" required>
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="form-group col">
-                            <input type="password" class="form-control" placeholder="Contraseña">
+                            <input id="contrasena" autocomplete="on" type="password" class="form-control" placeholder="Contraseña"required>
                         </div>
                         <div class="form-group col">
-                            <input type="password" class="form-control" placeholder="Confirma Contraseña">
+                            <input id="confirmarContrasena" autocomplete="on" type="password" class="form-control" placeholder="Confirma Contraseña" required>
                         </div>
                     </div>
                     <div class="form-group form-check">
-                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                        <input item id="terminos" type="checkbox" class="form-check-input" required>
                         <label class="form-check-label" >Acepto los <a href="#"> Terminos y Condiciones</a></label>
                     </div>
                     <div class="form-group">
-                        <label class="form-check-label" >¿Ya tienes una cuenta? <a href="login.html">Inicia Sesión</a></label>
+                        <label class="form-check-label" >¿Ya tienes una cuenta? <a href="login.html"required>Inicia Sesión</a></label>
                     </div>
-                    <button type="submit" class="btn btn-primary" style="width: 100%;">Regístate</button>
+                    <button  onclick="RegistrarUsuario()" class="btn btn-primary" style="width: 100%;" >Regístate</button>
                 </form>
             </div>
         </section>
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="js/controlador.js" type="text/javascript"></script>
 </body>
 </html>
