--- a/login.html
+++ b/login.html
@@ -19,15 +19,18 @@
 
       <form class="login_form">
 
-        <input id="telefono" type="text" placeholder="&#128241; Número de Teléfono" />
-        <input id="contrasena" autocomplete="on" type="password"  placeholder="&#x1f512; Password"  />
-        <input onclick="IniciarSesion()" class="btn_submit" type="submit"  value="Entrar" />
+        <input id="telefono" type="text" placeholder="&#128241; Número de Teléfono"  required/>
+        <input id="contrasena" autocomplete="on" type="password"  placeholder="&#x1f512; Password" required />
+        <input onclick="validarLogin()" class="btn_submit" type="submit"  value="Entrar" />
         <label>No tienes aun cuenta? <a class="form_recover" href="registro.html">Regístrate</a></label>
       </form>
     </div>
+
+    
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="js/controlador.js" type="text/javascript"></script>
+    <script src="js/validaciones.js" type="text/javascript"></script>
   </body>
 </html>
