--- a/registro.html
+++ b/registro.html
@@ -19,33 +19,33 @@
                     <div class="form-group">
                         <div class="row">
                             <div class="col">
-                                <input id="nombre" type="text" class="form-control" placeholder="Nombre Completo " required>
+                                <input id="nombre" type="text" class="form-control" placeholder="Nombre Completo " >
                             </div>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="row">
                             <div class="col">
-                                <input id="telefono" type="text" class="form-control" placeholder="Número de Teléfono" required>
+                                <input id="telefono" type="text" class="form-control" placeholder="Número de Teléfono" >
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="form-group col">
-                            <input id="contrasena" autocomplete="on" type="password" class="form-control" placeholder="Contraseña"required>
+                            <input id="contrasena" autocomplete="on" type="password" class="form-control" placeholder="Contraseña">
                         </div>
                         <div class="form-group col">
-                            <input id="confirmarContrasena" autocomplete="on" type="password" class="form-control" placeholder="Confirma Contraseña" required>
+                            <input id="confirmarContrasena" autocomplete="on" type="password" class="form-control" placeholder="Confirma Contraseña" >
                         </div>
                     </div>
                     <div class="form-group form-check">
-                        <input item id="terminos" type="checkbox" class="form-check-input" required>
+                        <input item id="terminos" type="checkbox" class="form-check-input" >
                         <label class="form-check-label" >Acepto los <a href="#"> Terminos y Condiciones</a></label>
                     </div>
                     <div class="form-group">
-                        <label class="form-check-label" >¿Ya tienes una cuenta? <a href="login.html"required>Inicia Sesión</a></label>
+                        <label class="form-check-label" >¿Ya tienes una cuenta? <a href="login.html">Inicia Sesión</a></label>
                     </div>
-                    <button  onclick="RegistrarUsuario()" class="btn btn-primary" style="width: 100%;" >Regístate</button>
+                    <button  onclick="validarRegistro()" class="btn btn-primary" style="width: 100%;" type="submit" >Regístate</button>
                 </form>
             </div>
         </section>
@@ -54,5 +54,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="js/controlador.js" type="text/javascript"></script>
+    <script src="js/validaciones.js" type="text/javascript"></script>
 </body>
 </html>
