se arreglaron varias cosas

--- a/chat2.html
+++ b/chat2.html
@@ -33,21 +33,18 @@
 		</div>
 	</div>
 	<div class="content">
-		<div class="contact-profile">
-			<img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="" />
-			<p>Harvey Specter</p>
+		<div class="contact-profile" id="perfilContacto">
+			
 		</div>
 		<div class="messages">
 			<ul id="conversacion">
-				
+				<li>
+					<h2 style="text-align: center; margin-top: 40vh;">Seleccione una conversación para mostrar los chats</h2>
+				</li>
 			</ul>
 		</div>
-		<div class="message-input">
-			<div class="wrap">
-			<input type="text" placeholder="Write your message..." />
-			<i class="fa fa-paperclip attachment" aria-hidden="true"></i>
-			<button class="submit"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
-			</div>
+		<div class="message-input" id="botonEnviar">
+			
 		</div>
 	</div>
 </div>
