--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
 
         <input id="telefono" type="text" placeholder="&#128241; Número de Teléfono"  required/>
         <input id="contrasena" autocomplete="on" type="password"  placeholder="&#x1f512; Password" required />
-        <input onclick="validarLogin()" class="btn_submit" type="submit"  value="Entrar" />
+        <input onclick="validarLogin()" class="btn_submit" type="button"  value="Entrar" />
         <label>No tienes aun cuenta? <a class="form_recover" href="registro.html">Regístrate</a></label>
       </form>
     </div>
