--- a/chat2.html
+++ b/chat2.html
@@ -36,7 +36,7 @@
 		<div class="contact-profile" id="perfilContacto">
 			
 		</div>
-		<div class="messages">
+		<div class="messages" id="mensajePrincipal">
 			<ul id="conversacion">
 				<li>
 					<h2 style="text-align: center; margin-top: 40vh;">Seleccione una conversación para mostrar los chats</h2>
