--- a/chat2.html
+++ b/chat2.html
@@ -61,9 +61,9 @@
 			<div class="modal-body">
 				<input type="text" class="form-control" placeholder="Nombre del Contacto">
 				<div class="input-group mb-3" style="margin-top: 5px;">
-					<input type="text" class="form-control" placeholder="Número del Contacto" aria-describedby="verificar">
+					<input type="number" class="form-control" placeholder="Número del Contacto" id="numeroContacto" aria-describedby="verificar">
 					<div class="input-group-append">
-					  	<button class="btn btn-outline-secondary" type="button" id="verificar">Verificar</button>
+					  	<button class="btn btn-outline-secondary" type="button" id="verificar" onclick="verificar()">Verificar</button>
 					</div>
 				</div>
 				<small>Antes de crear el contacto deberá verificar si existe en nuestra BD</small>
