se hizo el metodo buscar

--- a/chat2.html
+++ b/chat2.html
@@ -16,8 +16,8 @@
 		
 		</div>
 		<div id="search">
-			<input type="text" placeholder="Buscar Conversación..." />
-			<a type="button" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
+			<input type="text" id="busquedaConversacion" placeholder="Buscar Conversación..." />
+			<a type="button" onclick="buscarConversacion()"><i class="fa fa-search" aria-hidden="true"></i></a>
 		</div>
 		<div id="contacts">
 			<ul id="conversaciones">
