--- a/registro.html
+++ b/registro.html
@@ -45,7 +45,7 @@
                     <div class="form-group">
                         <label class="form-check-label" >¿Ya tienes una cuenta? <a href="login.html">Inicia Sesión</a></label>
                     </div>
-                    <button  onclick="validarRegistro()" class="btn btn-primary" style="width: 100%;" type="submit" >Regístate</button>
+                    <button  onclick="validarRegistro()" class="btn btn-primary" style="width: 100%;" type="button" >Regístate</button>
                 </form>
             </div>
         </section>
